# Archimedes

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
conan/: conanfile.py  conanfile.txt
crates/archimedes/: Cargo.toml
crates/archimedes-authz/: Cargo.toml
crates/archimedes-authz/src/: bundle.rs  cache.rs  config.rs  error.rs  evaluator.rs  lib.rs
crates/archimedes-authz/tests/: bundle_integration.rs
crates/archimedes-config/: Cargo.toml
crates/archimedes-config/src/: config.rs  error.rs  lib.rs  loader.rs  schema.rs  watcher.rs
crates/archimedes-core/: Cargo.toml  README.md
crates/archimedes-core/src/: binder.rs  context.rs  contract.rs  di.rs  error.rs  fixtures.rs  handler.rs  identity.rs  invocation.rs  lib.rs
crates/archimedes-docs/: Cargo.toml
crates/archimedes-docs/src/: error.rs  lib.rs  openapi.rs  redoc.rs  swagger.rs
crates/archimedes-extract/: Cargo.toml  README.md
crates/archimedes-extract/src/: body.rs  context.rs  cookie.rs  error.rs  extractor.rs  form.rs  header.rs  inject.rs  json.rs  lib.rs  multipart.rs  path.rs  query.rs  response.rs
crates/archimedes-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
crates/archimedes-ffi/src/: app.rs  config.rs  error.rs  extractors.rs  handler.rs  lib.rs  lifecycle.rs  middleware_config.rs  request.rs  response.rs  router.rs  runtime.rs  test_client.rs  types.rs
crates/archimedes-macros/: Cargo.toml
crates/archimedes-macros/src/: binder.rs  handler.rs  lib.rs  parse.rs
crates/archimedes-macros/tests/: handler_integration.rs  sentinel_integration.rs
crates/archimedes-middleware/: Cargo.toml  README.md
crates/archimedes-middleware/src/: context.rs  lib.rs  middleware.rs  pipeline.rs  types.rs
crates/archimedes-middleware/src/stages/: authorization.rs  compression.rs  cors.rs  error_normalization.rs  identity.rs  mod.rs  rate_limit.rs  request_id.rs  telemetry.rs  tracing.rs  validation.rs
crates/archimedes-middleware/tests/: pipeline_e2e.rs
crates/archimedes-node/: Cargo.toml
crates/archimedes-node/src/: authz.rs  config.rs  context.rs  error.rs  extractors.rs  handlers.rs  lib.rs  lifecycle.rs  middleware.rs  middleware_config.rs  response.rs  router.rs  server.rs  telemetry.rs  test_client.rs  validation.rs
crates/archimedes-py/: Cargo.toml  README.md  pyproject.toml
crates/archimedes-py/python/archimedes/: __init__.py  __init__.pyi
crates/archimedes-py/src/: authz.rs  config.rs  context.rs  error.rs  extractors.rs  handlers.rs  lib.rs  lifecycle.rs  middleware.rs  middleware_config.rs  response.rs  router.rs  server.rs  telemetry.rs  test_client.rs  validation.rs
crates/archimedes-router/: Cargo.toml
crates/archimedes-router/benches/: routing.rs
crates/archimedes-router/src/: lib.rs  method_router.rs  node.rs  params.rs  router.rs
crates/archimedes-sentinel/: Cargo.toml
crates/archimedes-sentinel/src/: artifact.rs  config.rs  error.rs  lib.rs  resolver.rs  validation 2.rs  validation.rs
crates/archimedes-server/: Cargo.toml
crates/archimedes-server/src/: config.rs  handler.rs  health.rs  lib.rs  lifecycle.rs  router.rs  server.rs  shutdown.rs  static_files.rs
crates/archimedes-sidecar/: Cargo.toml  Dockerfile
crates/archimedes-sidecar/examples/: config.toml  docker-compose.yml  kubernetes.yaml
crates/archimedes-sidecar/src/: config.rs  error.rs  headers.rs  health.rs  lib.rs  main.rs  middleware.rs  proxy.rs  server.rs
crates/archimedes-sse/: Cargo.toml
crates/archimedes-sse/src/: config.rs  error.rs  event.rs  lib.rs  stream.rs
crates/archimedes-tasks/: Cargo.toml
crates/archimedes-tasks/src/: error.rs  lib.rs  scheduler.rs  spawner.rs  task.rs
crates/archimedes-telemetry/: Cargo.toml
crates/archimedes-telemetry/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  tracing.rs
crates/archimedes-test/: Cargo.toml  README.md
crates/archimedes-test/src/: client.rs  error.rs  lib.rs  request.rs  response.rs
crates/archimedes-ws/: Cargo.toml
crates/archimedes-ws/src/: config.rs  connection.rs  error.rs  lib.rs  manager.rs  message.rs  upgrade.rs
crates/archimedes/src/: lib.rs
docs/: design.md  features.md  roadmap.md  spec.md
docs/decisions/: 009-archimedes-sidecar-multi-language.md  010-pull-only-policy-model.md  011-native-language-bindings.md  012-python-parity-requirements.md  013-binding-parity-priorities.md
examples/: README.md  contract.json  docker-compose.yml
examples/cpp-native/: CMakeLists.txt  Dockerfile  README.md
examples/cpp-native/src/: main.cpp
examples/cpp-native/tests/: test_config.cpp  test_error.cpp  test_request.cpp  test_response.cpp
examples/cpp-sidecar/: CMakeLists.txt  Dockerfile  README.md
examples/cpp-sidecar/src/: main.cpp
examples/feature-showcase/: Cargo.toml  README.md  archimedes.toml
examples/feature-showcase/policies/: authz.rego
examples/feature-showcase/src/: config.rs  main.rs  middleware.rs  tasks.rs
examples/feature-showcase/src/routes/: auth.rs  files.rs  mod.rs  realtime.rs  users.rs
examples/feature-showcase/static/: index.html
examples/go-native/: Dockerfile  README.md  go.mod  main.go
examples/go-native/archimedes/: archimedes.go  archimedes_test.go
examples/go-sidecar/: Dockerfile  README.md  go.mod  main.go
examples/python-native/: Dockerfile  README.md  archimedes.yaml  main.py  requirements.txt  test.sh
examples/python-sidecar/: Dockerfile  README.md  main.py  requirements.txt
examples/rust-native/: Cargo.toml  Dockerfile  README.md
examples/rust-native/src/: main.rs
examples/typescript-native/: Dockerfile  README.md  jest.config.js  package.json
examples/typescript-native/src/: index.test.ts  index.ts
examples/typescript-sidecar/: Dockerfile  README.md  package-lock.json  package.json
examples/typescript-sidecar/src/: index.ts
include/archimedes/: archimedes.hpp  config.hpp  error.hpp  request.hpp  response.hpp
vcpkg/ports/archimedes/: portfile.cmake  vcpkg.json
