[workspace]
resolver = "2"
members = [
    "crates/archimedes",
    "crates/archimedes-core",
    "crates/archimedes-server",
    "crates/archimedes-middleware",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Themis Platform Team"]
license = "Apache-2.0"
repository = "https://github.com/ThemisPlatform/archimedes"
keywords = ["server", "http", "grpc", "middleware", "themis"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
# Internal crates
archimedes = { path = "crates/archimedes" }
archimedes-core = { path = "crates/archimedes-core" }
archimedes-server = { path = "crates/archimedes-server" }
archimedes-middleware = { path = "crates/archimedes-middleware" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.11", features = ["v7", "serde"] }

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-otlp = "0.27"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Testing
tokio-test = "0.4"
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
