[workspace]
resolver = "2"
members = [
    "crates/archimedes",
    "crates/archimedes-core",
    "crates/archimedes-server",
    "crates/archimedes-middleware",
    "crates/archimedes-telemetry",
    "crates/archimedes-config",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Themis Platform Team"]
license = "Apache-2.0"
repository = "https://github.com/ThemisPlatform/archimedes"
keywords = ["server", "http", "grpc", "middleware", "themis"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
# Internal crates
archimedes = { path = "crates/archimedes" }
archimedes-core = { path = "crates/archimedes-core" }
archimedes-server = { path = "crates/archimedes-server" }
archimedes-middleware = { path = "crates/archimedes-middleware" }
archimedes-telemetry = { path = "crates/archimedes-telemetry" }
archimedes-config = { path = "crates/archimedes-config" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.11", features = ["v7", "serde"] }

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Testing
tokio-test = "0.4"
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow certain lints that are intentional design choices or require extensive refactoring
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
type_complexity = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cast_precision_loss = "allow"
option_if_let_else = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
unused_self = "allow"
redundant_clone = "allow"
assigning_clones = "allow"
map_unwrap_or = "allow"
manual_string_new = "allow"
manual_let_else = "allow"
let_and_return = "allow"
unwrap_or_default = "allow"
uninlined_format_args = "allow"
match_wildcard_for_single_variants = "allow"
ignored_unit_patterns = "allow"
single_match_else = "allow"
