[workspace]
resolver = "2"
members = [
    "crates/archimedes",
    "crates/archimedes-core",
    "crates/archimedes-server",
    "crates/archimedes-middleware",
    "crates/archimedes-telemetry",
    "crates/archimedes-config",
    "crates/archimedes-router",
    "crates/archimedes-extract",
    "crates/archimedes-macros",
    "crates/archimedes-sentinel",
    "crates/archimedes-authz",
    "crates/archimedes-docs",
    "crates/archimedes-ws",
    "crates/archimedes-sse",
    "crates/archimedes-tasks",
    "crates/archimedes-sidecar",
    "crates/archimedes-ffi",
    "crates/archimedes-py",
    "crates/archimedes-node",
    "crates/archimedes-test",
]
exclude = ["examples/rust-native", "examples/feature-showcase"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Themis Platform Team"]
license = "Apache-2.0"
repository = "https://github.com/ThemisPlatform/archimedes"
keywords = ["server", "http", "grpc", "middleware", "themis"]
categories = ["web-programming::http-server", "asynchronous"]

[workspace.dependencies]
# Shared platform types (from themis-platform-types crate)
# NOTE: For crates.io publishing, this must be published first or replaced with a version
themis-platform-types = { git = "https://github.com/A-Somniatore/themis-platform-types", branch = "main" }

# Internal crates (version matches workspace.package.version for publishing)
archimedes = { path = "crates/archimedes", version = "0.1.0" }
archimedes-core = { path = "crates/archimedes-core", version = "0.1.0" }
archimedes-server = { path = "crates/archimedes-server", version = "0.1.0" }
archimedes-middleware = { path = "crates/archimedes-middleware", version = "0.1.0" }
archimedes-telemetry = { path = "crates/archimedes-telemetry", version = "0.1.0" }
archimedes-config = { path = "crates/archimedes-config", version = "0.1.0" }
archimedes-router = { path = "crates/archimedes-router", version = "0.1.0" }
archimedes-extract = { path = "crates/archimedes-extract", version = "0.1.0" }
archimedes-macros = { path = "crates/archimedes-macros", version = "0.1.0" }
archimedes-sentinel = { path = "crates/archimedes-sentinel", version = "0.1.0" }
archimedes-authz = { path = "crates/archimedes-authz", version = "0.1.0" }
archimedes-docs = { path = "crates/archimedes-docs", version = "0.1.0" }
archimedes-ws = { path = "crates/archimedes-ws", version = "0.1.0" }
archimedes-sse = { path = "crates/archimedes-sse", version = "0.1.0" }
archimedes-tasks = { path = "crates/archimedes-tasks", version = "0.1.0" }
archimedes-sidecar = { path = "crates/archimedes-sidecar", version = "0.1.0" }
archimedes-ffi = { path = "crates/archimedes-ffi", version = "0.1.0" }
archimedes-py = { path = "crates/archimedes-py", version = "0.1.0" }
archimedes-node = { path = "crates/archimedes-node", version = "0.1.0" }
archimedes-test = { path = "crates/archimedes-test", version = "0.1.0" }

# Themis crates for contract integration
themis-artifact = { path = "../themis/crates/themis-artifact" }
themis-core = { path = "../themis/crates/themis-core" }
themis-registry = { path = "../themis/crates/themis-registry" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP server
hyper = { version = "1.6", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.2"
http-body-util = "0.1"
bytes = "1.9"

# WebSocket
tokio-tungstenite = "0.26"
tungstenite = "0.26"
futures-util = { version = "0.3", features = ["sink"] }
sha1 = "0.10"
base64 = "0.22"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# UUID
uuid = { version = "1.11", features = ["v7", "serde"] }

# Tracing / Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Regex and collections
regex = "1.11"
indexmap = { version = "2.7", features = ["serde"] }

# Compression and archives (for OPA bundles)
flate2 = "1.0"
tar = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Synchronization
parking_lot = "0.12"

# Cron
cron = "0.15"

# Testing
tokio-test = "0.4"
proptest = "1.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow certain lints that are intentional design choices or require extensive refactoring
must_use_candidate = { level = "allow", priority = 1 }
return_self_not_must_use = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
struct_field_names = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
use_self = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }
redundant_clone = { level = "allow", priority = 1 }
assigning_clones = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
manual_string_new = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 }
let_and_return = { level = "allow", priority = 1 }
unwrap_or_default = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
match_wildcard_for_single_variants = { level = "allow", priority = 1 }
ignored_unit_patterns = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
unused_async = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
option_option = { level = "allow", priority = 1 }
