[package]
name = "archimedes-macros"
description = "Procedural macros for Archimedes handlers - FastAPI-style ergonomics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["macros", "proc-macro", "handler", "async"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
archimedes-core.workspace = true
archimedes-extract.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true

[lints]
workspace = true
