[package]
name = "archimedes-middleware"
description = "Middleware pipeline implementation for the Archimedes framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archimedes-core.workspace = true
archimedes-authz = { workspace = true, optional = true }
archimedes-sentinel = { workspace = true, optional = true }
themis-platform-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
uuid.workspace = true

# Compression
flate2 = { version = "1.0", optional = true }
brotli = { version = "7.0", optional = true }

[features]
default = []
# Enable OPA/Eunomia authorization integration
opa = ["dep:archimedes-authz"]
# Enable Themis/Sentinel contract validation integration
sentinel = ["dep:archimedes-sentinel"]
# Enable compression middleware (gzip, brotli)
compression = ["dep:flate2", "dep:brotli"]
# Enable all production integrations
full = ["opa", "sentinel", "compression"]

[dev-dependencies]
tokio = { workspace = true, features = [
    "test-util",
    "macros",
    "rt-multi-thread",
] }

[lints]
workspace = true
