[package]
name = "archimedes-router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "High-performance radix tree router for Archimedes"
repository.workspace = true
keywords = ["router", "radix-tree", "http", "routing", "web"]
categories = ["web-programming", "network-programming"]

[dependencies]
http.workspace = true
smallvec = "1.13"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "routing"
harness = false

[lints]
workspace = true
