[package]
name = "archimedes-server"
description = "HTTP/gRPC server implementation for the Archimedes framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
archimedes-core.workspace = true
archimedes-middleware.workspace = true
archimedes-router.workspace = true
archimedes-extract.workspace = true
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
