[package]
name = "archimedes-tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Background task execution and scheduling for Archimedes"
keywords = ["async", "tasks", "scheduler", "background", "jobs"]
categories = ["asynchronous", "concurrency"]

[dependencies]
# Internal crates
archimedes-core = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }

# Cron parsing
cron = "0.15"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[lints]
workspace = true
